# softpasskey

./: .gitignore  registration1.txt  yubi1.pcapng  yubi1.txt
.github/workflows/: rust.yml
data/: fake_priv.pem  registration1_frames.json  registration1_frames.txt  registration1_pub.pem
poc/: Cargo.toml  demo-pk8.pem  demo.pem
poc/src/: browser.rs  cbor.rs  ctap.rs  device.rs  engine.rs  main.rs  store.rs
scripts/: attestation_decode.py  ctap2_decode.py  extract_credential_key.py  fido_parse.py  hid_init_decode.py  list_fido.py  run_all.py  verify_attestation.py
