[package]
name = "softpasskey"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
hex = "0.4"
anyhow = "1.0"
thiserror = "1.0"
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "pkcs8", "pem"] }
sha2 = "0.10"
once_cell = "1.19"
hidapi = { version = "2" }
clap = { version = "4.5", features = ["derive"] }
base64 = "0.21"
serde_json = "1.0"
url = "2.5"
ureq = { version = "2.12.1", features = ["json"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.21"
tungstenite = { version = "0.21", default-features = false, features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
tempfile = "3" 